force-app/main/default/objects/Other_Business_Line__c/Other_Business_Line__c.object-meta.xml
<CustomObject>
    <label>Other Business Lines</label>
    <nameField>
        <displayFormat>Business Line {0000}</displayFormat>
        <label>Other Business Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Business Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>