force-app/main/default/objects/Other_Business_Line__c/fields/Business_LinesLU__c.field-meta.xml
<CustomField>
    <fullName>Business_LinesLU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Lines</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BusinessLinesDivisions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Line</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLinesDivisions__c</referenceTo>
    <relationshipName>Business_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>