force-app/main/default/objects/Other_Business_Line__c/fields/Business_LinesPL__c.field-meta.xml
<CustomField>
    <fullName>Business_LinesPL__c</fullName>
    <label>Business Lines</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DivisionPL__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Lines</valueSetName>
    </valueSet>
</CustomField>