force-app/main/default/objects/Other_Business_Line__c/fields/DivisionPL__c.field-meta.xml
<CustomField>
    <fullName>DivisionPL__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>