force-app/main/default/objects/Other_Business_Line__c/fields/PL_Selected__c.field-meta.xml
<CustomField>
    <fullName>PL_Selected__c</fullName>
    <formula>NOT(ISPICKVAL(DivisionPL__c, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL Selected</label>
    <type>Checkbox</type>
</CustomField>